PR c/68868 - atomic_init emits an unnecessary fence

gcc/ChangeLog
	* ginclude/stdatomic.h (atomic_init): Use atomic_store instead
	of plain assignment.
gcc/testsuite/ChangeLog
	* testsuite/gcc.dg/atomic/stdatomic-init.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@231733 138bc75d-0d04-0410-961f-82ee72b054a4